Fix alignment

--- a/src/styles/places.css
+++ b/src/styles/places.css
@@ -39,30 +39,33 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.place-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .img-cont {
-  position: relative;
+  width: 250px;
+  height: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 250px;
-  height: 250px;
 }
 
 .circle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  z-index: -1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 
 .img {
   width: 100%;
@@ -160,6 +163,12 @@
   font-size: 0.8rem;
   font-weight: bold;
   width: 300px;
+  text-align: center;
+}
+
+.rate{
+  font-weight: 600;
+  color: darkolivegreen;
 }
 
 .social {
@@ -198,6 +207,5 @@
   .description {
     margin: 2vh 0 1vh 0;
     width: 350px;
-    min-height: 75px;
   }
 }
